# audio_visualization

./: .gitignore  ALSA.cpp  AudioInput.cpp  CMakeLists.txt  Doxyfile  Log.hpp  Makefile  README.md  build.sh  cfg.yaml  clean  configure.ac  go  makefile  opengl_spectrogram
cmake/Modules/: FindGLUT.cmake  FindLibFFTW3.cmake  FindLibPortAudio.cmake  FindLibYaml.cmake  FindOpenGL.cmake
doc/html/: ALSA_8hpp_source.html  AudioInput_8cpp_source.html  AudioInput_8hpp_source.html  Display_8cpp_source.html  Display_8hpp_source.html  GraphicsItem_8hpp_source.html  Log_8cpp_source.html  Log_8hpp_source.html  PortAudio_8cpp_source.html  PortAudio_8hpp_source.html  SpectrogramVisualizer_8cpp_source.html  SpectrogramVisualizer_8hpp_source.html  annotated.html  classALSA-members.html  classALSA.html  classAudioInput-members.html  classAudioInput.html  classDisplay-members.html  classDisplay.html  classGraphicsItem-members.html  classGraphicsItem.html  classLog-members.html  classLog.html  classPortAudio-members.html  classPortAudio.html  classes.html  common_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  main_8cpp_source.html  md_README.html  menudata.js  pages.html  shared_8cpp_source.html  (+9 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  (+4 more)
doc/latex/: annotated.tex  classALSA.eps  classALSA.tex  classAudioInput.eps  classAudioInput.tex  classDisplay.tex  classGraphicsItem.eps  classGraphicsItem.tex  classLog.tex  classPortAudio.eps  classPortAudio.tex  hierarchy.tex  md_README.tex  refman.tex  structParam.tex  structSpectrogramVisualizer.eps  structSpectrogramVisualizer.tex  structSpectrogramVisualizer_1_1shortcuts.tex
src/: ALSA.hpp  AudioInput.cpp  AudioInput.hpp  AudioVisualizationConfig.h.in  Display.cpp  Display.hpp  GraphicsItem.hpp  Log.cpp  Log.hpp  Makefile.am  PortAudio.cpp  PortAudio.hpp  SpectrogramVisualizer.cpp  SpectrogramVisualizer.hpp  common.h  main.cpp  shared.cpp  shared.hpp
src/util/: showAllDeviceInfo.cpp  testInput.cpp
